* Version 0.3
	- Folder scan has been moved from ui thread to a separate thread;
	- C/C++ style comments ignored when parsing files;
	- Multiple root folders support;

* Version 0.2
	- User interface has been localized, so it's now possible to change the main window language at run-time;
	- Image render mode has been removed;
	- Persistent user settings;
	- Available GraphViz plugins are now detected;
	- Minor fixes and changes;

* Version 0.1
	- First initial public release