@@ -2,6 +2,8 @@
 	- Folder scan has been moved from ui thread to a separate thread;
 	- C/C++ style comments ignored when parsing files;
 	- Multiple root folders support;
+	- Redesigned user interfaces;
+	- New files selection mode;
 
 * Version 0.2
 	- User interface has been localized, so it's now possible to change the main window language at run-time;
